--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
 before_script:
   - cp config/database.travis.yml config/database.yml
   - psql -c 'create database auth0app_test;' -U postgres
+  - gem install bundler
 script:
   - bin/rake db:migrate RAILS_ENV=test
   - bin/rake
