--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ rvm:
   - 2.5.1
 services:
   - postgresql
+before_install:
+  - gem install bundler
 before_script:
   - cp config/database.travis.yml config/database.yml
   - psql -c 'create database auth0app_test;' -U postgres
-  - gem install bundler
 script:
   - bin/rake db:migrate RAILS_ENV=test
   - bin/rake
